Prevent history view from collapsing

--- a/src/components/main-page.module.scss
+++ b/src/components/main-page.module.scss
@@ -18,7 +18,7 @@
 
 .history {
   display: flex;
-  flex: 0 0 0;
+  flex: 1 0 0;
   flex-direction: column;
   margin-top: 1rem;
   height: 40vh;
